--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
-Flask==3.0.2
+blinker==1.9.0
+click==8.2.1
+dotenv==0.9.9
+Flask==3.1.2
+flask-cors==6.0.1
 Flask-SQLAlchemy==3.1.1
-SQLAlchemy==2.0.32
-pymysql==1.1.1
-python-dotenv==1.0.1
+greenlet==3.2.4
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+PyMySQL==1.1.2
+python-dotenv==1.1.1
+SQLAlchemy==2.0.43
+typing_extensions==4.15.0
+Werkzeug==3.1.3
