--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -103,9 +103,9 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Docker Compose
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y docker-compose-plugin
+      uses: docker/setup-compose-action@v1
+      with:
+        version: latest
 
     - name: Create environment file
       run: |
