--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,13 @@ services:
   mysql:
     image: mysql:8
     container_name: calculator-mysql
+    env_file:
+      - .env
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-passwd}
-      MYSQL_DATABASE: ${MYSQL_DATABASE:-calculator_db}
-      MYSQL_USER: ${MYSQL_USER:-calc_user}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-calc_pass}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
       - "3306:3306"
     volumes:
@@ -17,23 +19,25 @@ services:
       - calculator-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-p${MYSQL_ROOT_PASSWORD:-passwd}"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-p${MYSQL_ROOT_PASSWORD}"]
       interval: 10s
       timeout: 5s
       retries: 10
       start_period: 30s
 
   backend:
-    image: ${DOCKERHUB_USERNAME:-sid00r}/calculator-backend:latest
+    image: ${DOCKERHUB_USERNAME}/calculator-backend:latest
     container_name: calculator-backend
     ports:
       - "5000:5000"
+    env_file:
+      - .env
     environment:
       MYSQL_HOST: mysql
       MYSQL_PORT: 3306
-      MYSQL_USER: ${MYSQL_USER:-calc_user}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-calc_pass}
-      MYSQL_DATABASE: ${MYSQL_DATABASE:-calculator_db}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
     depends_on:
       mysql:
         condition: service_healthy
@@ -48,8 +52,10 @@ services:
       start_period: 40s
 
   frontend:
-    image: ${DOCKERHUB_USERNAME:-sid00r}/calculator-frontend:latest
+    image: ${DOCKERHUB_USERNAME}/calculator-frontend:latest
     container_name: calculator-frontend
+    env_file:
+      - .env
     ports:
       - "80:80"
     depends_on:
