--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,7 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main, ci/cd]
+    branches: [main]
   pull_request:
     branches: [ "*" ]
     
@@ -69,6 +69,7 @@ jobs:
   docker-build:
     runs-on: ubuntu-latest
     needs: [test-backend, test-frontend]
+    if: github.ref == 'refs/heads/main'
     
     steps:
     - uses: actions/checkout@v4
@@ -101,6 +102,7 @@ jobs:
   docker-compose-test:
     runs-on: ubuntu-latest
     needs: docker-build
+    if: github.ref == 'refs/heads/main'
   
     steps:
     - uses: actions/checkout@v4
