--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
 
   backend:
     image: ${DOCKERHUB_USERNAME}/calculator-backend:latest
+    #build: ./calculator-backend
     container_name: calculator-backend
     ports:
       - "5000:5000"
@@ -39,8 +40,7 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
     depends_on:
-      mysql:
-        condition: service_healthy
+      - mysql
     networks:
       - calculator-network
     restart: unless-stopped
@@ -53,11 +53,12 @@ services:
 
   frontend:
     image: ${DOCKERHUB_USERNAME}/calculator-frontend:latest
+    #build: ./calculator-frontend
     container_name: calculator-frontend
     env_file:
       - .env
     ports:
-      - "80:80"
+      - "3000:3000"
     depends_on:
       - backend
     networks:
